--- a/source_code/station_computer/configuration.json
+++ b/source_code/station_computer/configuration.json
@@ -3,7 +3,7 @@
     "icon": "satellite.ico",
     "tle_file": "tle_active.txt",
     "tle_source": "https://celestrak.org/NORAD/elements/gp.php?GROUP=ACTIVE&FORMAT=tle",
-    "last_tle_update": "2024-10-03 10:05:57.560761+00:00",
+    "last_tle_update": "2024-10-15 13:20:25.645448+00:00",
     "tle_update_period": 2,
     "station_latitude": 49.4862398,
     "station_longitude": 18.0405796,
@@ -14,6 +14,7 @@
         "CAS-5A (FO-118)",
         "FUNCUBE-1 (AO-73)",
         "ISS (ZARYA)",
+        "LUCKY-7",
         "NOAA 15",
         "NOAA 18",
         "NOAA 19",
