--- a/source_code/station_computer/configuration.json
+++ b/source_code/station_computer/configuration.json
@@ -3,7 +3,7 @@
     "icon": "satellite.ico",
     "tle_file": "tle_active.txt",
     "tle_source": "https://celestrak.org/NORAD/elements/gp.php?GROUP=ACTIVE&FORMAT=tle",
-    "last_tle_update": "2024-10-15 13:20:25.645448+00:00",
+    "last_tle_update": "2024-10-19 04:54:08.130397+00:00",
     "tle_update_period": 2,
     "station_latitude": 49.4862398,
     "station_longitude": 18.0405796,
@@ -18,6 +18,8 @@
         "NOAA 15",
         "NOAA 18",
         "NOAA 19",
+        "NOAA 20 (JPSS-1)",
+        "NOAA 21 (JPSS-2)",
         "OSCAR 7 (AO-7)",
         "PLANETUM1",
         "VZLUSAT-2",
