--- a/source_code/station_computer/configuration.json
+++ b/source_code/station_computer/configuration.json
@@ -1,24 +1,18 @@
 {
     "program_name": "Satellite Tracking Software",
     "icon": "satellite.ico",
-    "tle_file": "tle_active.txt",
-    "tle_source": "https://celestrak.org/NORAD/elements/gp.php?GROUP=ACTIVE&FORMAT=tle",
-    "last_tle_update": "2024-12-09 17:13:38.250099+00:00",
-    "tle_update_period": 2,
     "station_latitude": 49.4862398,
     "station_longitude": 18.0405796,
     "station_altitude": 364.0,
     "min_max": 20.0,
     "tracked_satellites": [
-        "BDSAT-2",
-        "CAS-5A (FO-118)",
-        "ISS (ZARYA)",
-        "LUCKY-7",
         "NOAA 15",
+        "ISS",
         "NOAA 18",
         "NOAA 19",
-        "OSCAR 7 (AO-7)",
+        "SWISSCUBE",
+        "XW-3",
         "VZLUSAT-2",
-        "XW-3 (CAS-9)"
+        "LASARsat"
     ]
 }
